docs/7.55/md/abenliteral.md
---
title: "Literals"
description: |
  In addition to the named data objects(https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennamed_data_object_glosry.htm 'Glossary Entry') that can be addressed by their names in ABAP programs (this includes the text symbols) and the anonymous data objects(https://help.sap.com/doc/abapd
version: "7.55"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenliteral.htm"
abapFile: "abenliteral.htm"
keywords: ["do", "if", "try", "data", "types", "abenliteral"]
---

* * *

AS ABAP Release 755, ©Copyright 2020 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_reference.htm) →  [Declarations](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abendeclarations.htm) →  [Declaration Statements](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_declarations.htm) →  [Data Types and Data Objects](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abentypes_and_objects.htm) →  [Declaring Data Objects](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenobjects_statements.htm) → 

Literals

In addition to the [named data objects](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abennamed_data_object_glosry.htm "Glossary Entry") that can be addressed by their names in ABAP programs (this includes the text symbols) and the [anonymous data objects](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenanonymous_data_object_glosry.htm "Glossary Entry") that are created by the statement [CREATE DATA](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abapcreate_data.htm), there are also literals that are defined in the source code of a program by specifying a string that represents a value. Possible literals are:

-   [Numeric literals](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenuntyped_number_literals.htm)

-   [Character literals](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenuntyped_character_literals.htm)

The [literal operator](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenliteral_operator.htm) & can be used to link multiple literals of the same type to a literal.

Hint

In general ABAP, only [untyped literals](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenuntyped_literal_glosry.htm "Glossary Entry") are available. In [ABAP SQL](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_sql_glosry.htm "Glossary Entry"), also [typed literals](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abentyped_literal_glosry.htm "Glossary Entry") can and should be used.

Programming Guideline

[Using Literals](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenliterals_guidl.htm "Guideline")

Continue
[Numeric Literals](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenuntyped_number_literals.htm)
[Character Literals](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenuntyped_character_literals.htm)
[Literal Operator](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenliteral_operator.htm)